--- a/src/app/pages/leave/masters/list/mastersList.html
+++ b/src/app/pages/leave/masters/list/mastersList.html
@@ -167,7 +167,7 @@
             </div>
 
             <div class="row">
-                
+
                 <div class="form-group col-md-3">
                     <label for="inputPassword3">{{page.pageinfo.fields.LCRIsShortLeave.text}}</label>
                     <field-box page="page" ng-column="page.pageinfo.fields.LCRIsShortLeave" ng-entity="entity" form="editForm"></field-box>
@@ -194,18 +194,18 @@
                     <label for="inputPassword3">{{page.pageinfo.fields.LCRTreatAs.text}}</label>
                     <field-box page="page" ng-column="page.pageinfo.fields.LCRTreatAs" ng-entity="entity" form="editForm"></field-box>
                 </div>
-                
+
                 <div ng-if="entity.LCRTreatAs" class="form-group col-md-3">
                     <label for="inputPassword3">{{page.pageinfo.fields.LCRIsTreatAsAbsent.text}}</label>
-                    <input type="radio" name="commonRedioForPresentOrAbsent" ng-model="entity.LCRIsTreatAsAbsent">
+                    <input type="radio" name="commonRedioForPresentOrAbsent" ng-model="entity.LCRIsTreatAsAbsent" value="true">
                     <!--<field-box page="page" ng-column="page.pageinfo.fields.LCRIsTreatAsAbsent" ng-entity="entity" form="editForm"></field-box>-->
                 </div>
                 <div ng-if="entity.LCRTreatAs" class="form-group col-md-3">
                     <label for="inputPassword3">{{page.pageinfo.fields.LTRIsPresentDays.text}}</label>
-                    <input type="radio" name="commonRedioForPresentOrAbsent" ng-model="entity.LTRIsPresentDays">
+                    <input type="radio" name="commonRedioForPresentOrAbsent" ng-model="entity.LTRIsPresentDays" value="true">
                     <!--<field-box page="page" ng-column="page.pageinfo.fields.LTRIsPresentDays" ng-entity="entity" form="editForm"></field-box>-->
                 </div>
-               
+
             </div>
 
             <div class="row">
@@ -234,15 +234,15 @@
                 </div>
                 <div ng-if="entity.LCRIsComOff" class="form-group col-md-3">
                     <label for="inputPassword3" clas>{{page.pageinfo.fields.LCRIsCompOffCash.text}}</label>
-                    <input type="radio" name="commonRedioForCompOff" ng-model="entity.LCRIsCompOffCash">
+                    <input type="radio" name="commonRedioForCompOff" ng-model="entity.LCRIsCompOffCash" value="true">
                 </div>
                 <div ng-if="entity.LCRIsComOff" class="form-group col-md-3">
                     <label for="inputPassword3">{{page.pageinfo.fields.LCRIsCompOffLeave.text}}</label>
-                    <input type="radio" name="commonRedioForCompOff" ng-model="entity.LCRIsCompOffLeave">
+                    <input type="radio" name="commonRedioForCompOff" ng-model="entity.LCRIsCompOffLeave" value="true">
                 </div>
                 <div ng-if="entity.LCRIsComOff" class="form-group col-md-3">
                     <label for="inputPassword3">{{page.pageinfo.fields.LCRIsCompOffNone.text}}</label>
-                    <input type="radio" name="commonRedioForCompOff" ng-model="entity.LCRIsCompOffNone">
+                    <input type="radio" name="commonRedioForCompOff" ng-model="entity.LCRIsCompOffNone" value="true">
                 </div>
 
             </div>
