--- a/src/app/pages/leave/transaction/leaveapplication/leave.leaveapplication.html
+++ b/src/app/pages/leave/transaction/leaveapplication/leave.leaveapplication.html
@@ -39,7 +39,8 @@
                     <!--<select class="form-control " title="Select Employee " ng-model="entity.LEADEmpId " ng-options="opt.value
     as opt.name for opt in page.pageinfo.selects.LEADEmpId " ng-change="employeeOnChange() ">
                     </select>-->
-                    <field-box page="page" ng-column="page.pageinfo.fields.LEADEmpId " fb-change="employeeOnChange()" fb-click="onControlClick()" ng-entity="entity " form="editForm "></field-box>
+                    <field-box page="page" ng-column="page.pageinfo.fields.LEADEmpId " fb-change="employeeOnChange()" fb-click="onControlClick()"
+                        ng-entity="entity " form="editForm "></field-box>
                 </div>
                 <div class="form-group col-md-5 ">
                     <label for="inputPassword3 ">{{page.pageinfo.fields.LEADLTId.text}}</label>
@@ -113,12 +114,12 @@
                 </div>
             </div>
 
-            <div class="row ">
+            <!--<div class="row ">
                 <div class="form-group col-md-4 ">
                     <label for="inputPassword3 ">{{page.pageinfo.fields.ELSDSanctionFromDate.text}}</label>
                     <field-box page="page" ng-column="page.pageinfo.fields.ELSDSanctionFromDate " ng-entity="entity " form="editForm "></field-box>
                 </div>
-            </div>
+            </div>-->
 
 
             <div class="row" ng-show="isLeaveApprovedDet ">
